Added Auto Discover

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,13 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Irfan\\Contact\\ContactServiceProvider"
+            ]
+        }
+    }
 
 }
